<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yaml</name>
  <version>0.0.0</version>
  <description>ROS2 wrapper for yaml-cpp library</description>
  <maintainer email="zhaojiawei392@gmail.com">kai</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>yaml-cpp</depend>

  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
